--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,13 @@
   }
 }
 
+@font-face {
+  font-family: "Joystix";
+  src: url("/fonts/joystix.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
